--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,30 +1,34 @@
-<!<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>{{ page.title }}</title>
-	    <link rel="stylesheet" type="text/css" href="css/main.css">
-    </head>
+  <head>
+      
+  {% include head.html %}
 
+  {% if site.google-analytics %}
+  {% include google-analytics.html %}
+  {% endif %}
 
-    <body>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/cv">CV</a></li>
-                <li><a href="/blog">Blog</a></li>
-            </ul>
-        </nav>
-        <div class="container">
+  {% if page.url == "/404.html" %}
+  <meta http-equiv="refresh" content="10; url={{ site.baseurl }}">
+  {% endif %}
 
-            {{ content }}
+  </head>
 
-        </div>
-        <footer>
-            <ul>
-                <li><a href="mailto:RoscaS@gmail.com">email</a></li>
-                <li><a href="https://github.com/RoscaS">github.com/RoscaS</a></li>
-            </ul>
-        </footer>
-    </body>
+  <body>
+
+  {% include header.html %}
+
+  <div class="wrapper">
+        {{ content }}
+  </div>
+
+</body>
+
+<foot>
+
+    {% include footer.html %}
+    {% include foot.html %}
+
+</foot>
+
 </html>
