--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-      
-  {% include head.html %}
-
-  {% if site.google-analytics %}
-  {% include google-analytics.html %}
-  {% endif %}
-
-  {% if page.url == "/404.html" %}
-  <meta http-equiv="refresh" content="10; url={{ site.baseurl }}">
-  {% endif %}
-
+    <title>{{ page.title }}</title>
+    
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+  
   </head>
 
+
   <body>
+    <nav>
+<ul>
+<li><a href="/">Home</a></li>
+<li><a href="/about">About</a></li>
+<li><a href="/cv">CV</a></li>
+<li><a href="/blog">Blog</a></li>
+</ul>
+    </nav>
+<div class="container">
 
-  {% include header.html %}
+  {{ content }}
 
-  <div class="wrapper">
-        {{ content }}
-  </div>
-
-</body>
-
-<foot>
-
-    {% include footer.html %}
-    {% include foot.html %}
-
-</foot>
+</div>
+  
+  <footer>
+   <ul>
+   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+   </ul>
+  </footer>
+  </body>
 
 </html>
