--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
   <head>
     <title>{{ page.title }}</title>
     
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/github-markdown.css">
+    <link rel="stylesheet" type="code" href="/css/github-markdown.css">
   
   </head>
 
