--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,34 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{ page.title }}</title>
-    
-    <link rel="stylesheet" type="text/css" href="/css/github-markdown.css">
-  
-  </head>
 
+  {% include head.html %}
 
   <body>
-    <nav>
-<ul>
-<li><a href="/">Home</a></li>
-<li><a href="/about">About</a></li>
-<li><a href="/cv">CV</a></li>
-<li><a href="/blog">Blog</a></li>
-</ul>
-    </nav>
-<div class="container">
 
-  {{ content }}
+    {% include header.html %}
 
-</div>
-  
-  <footer>
-   <ul>
-   <li><a href="mailto:RoscaS@gmail.com">email</a></li>
-   <li><a href="https://github.com/RoscaS">github.com/RoscaS</a></li>
-   </ul>
-  </footer>
+    <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
+
+    {% include footer.html %}
+
   </body>
 
 </html>
