--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,18 @@
 <footer class="site-footer">
 		<div class="wrapper">
     		<center> 
-						<p>
+						<!--<p>
 							<a class="link" href="{{ "/" | relative_url }}">Home</a> /	
 							<a class="link" href="{{ site.baseurl }}/archive/">Archive</a> /
 							<a class="link" href="{{ site.baseurl }}/category/">Category</a> / 
 							<a class="link" href="{{ site.baseurl }}/tags/">Tags</a> / 
 							<a class="link" href="{{ site.baseurl }}/about/">About</a> /
 							<a class="link" href="{{ site.baseurl }}/contact/">Contact</a>
-						</p>
+						</p>-->
 						<span><script>document.write(new Date().getFullYear());</script></span>
 						<span>&copy;</span>
         
-						<a class="link" href="{{ "/" | relative_url }}">{{ site.name }}</a>
+						<a href="mailto:{{ site.email }}?subject=Hello&nbsp;{{ site.name }}"> RoscaS</a>
 						<br>
     		</center>  
   	</div>
