--- a/_includes/main.html
+++ b/_includes/main.html
@@ -43,7 +43,7 @@
             <span><script>document.write(new Date().getFullYear());</script></span>
             <span>&copy;</span>
 
-            <a class="link" href="{{ " / " | relative_url }}">{{ site.name }}</a>
+            <a href="mailto:{{ site.email }}?subject=Hello&nbsp;{{ site.name }}"> RoscaS</a>
             <br>
         </center>
     </div>
