--- a/_layouts/pageLong.html
+++ b/_layouts/pageLong.html
@@ -42,10 +42,29 @@ layout: null
 	</div>
 </div>
 
-<footer>
+<footer class="site-footer">
+    <div class="wrapper">
+        <center>
+            <p>
+                <a class="link" href="{{ " / " | relative_url }}">Home</a> /
+                <a class="link" href="{{ site.baseurl }}/archive/">Archive</a> /
+                <a class="link" href="{{ site.baseurl }}/category/">Category</a> /
+                <a class="link" href="{{ site.baseurl }}/tags/">Tags</a> /
+                <a class="link" href="{{ site.baseurl }}/about/">About</a> /
+                <a class="link" href="{{ site.baseurl }}/contact/">Contact</a>
+            </p>
+            <span><script>document.write(new Date().getFullYear());</script></span>
+            <span>&copy;</span>
 
-{% include foot.html %}
-{% include footer.html %}
-
+            <a href="mailto:{{ site.email }}?subject=Hello&nbsp;{{ site.name }}"> RoscaS</a>
+            <br>
+        </center>
+    </div>
 </footer>
+
 </html>
+
+
+
+
+
