--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,33 +1,21 @@
 <footer class="site-footer">
 	<div class="wrapper">
-        <!--<center> -->
+        <!--<AFFICHAGE DES NEWS INDEX> -->
+        {% for category in site.categories %}
+        {% capture cat %}{{ category | first }}{% endcapture %}
 
-            {% assign is_first = true %}
-            {% for post in site.posts %}
-
-            {% capture this_year %}
-            {{ post.date | date: "%Y" }}
-            {% endcapture %}
-            {% if is_first %}
-            <!--<h2>{{ this_year }}</h2>-->
-            {% endif %}
-
-            {% capture next_year %}
-            {{ post.previous.date | date: "%Y" }}
-            {% endcapture %}
-            {% if this_year == next_year %}
-            {% assign is_first = false %}
-            {% else %}
-            {% assign is_first = true %}
-            {% endif %}
-
+        <h4>{{ cat | capitalize }}</h4>
             <ul>
-                <li><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a><span class="date"> - {{ post.date | date_to_long_string }}</span>
-                </li>
-            </ul>
-                
+            {% for post in site.categories[cat] %}
+            <li>
+            <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+                <span class="date"> - {{ post.date | date_to_long_string }}</span></p>
+            </li>
             {% endfor %}
-        <!--</center>  -->
+            </ul>
+
+        {% endfor %}
+        <!--</AFFICHAGE DES NEWS INDEX>  -->
   	</div>
 </footer>
 <footer class="site-footer">
