--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -22,6 +22,18 @@ body {
 }
 
 
+/**
+* Perso
+*/
+
+.image {
+    display: block;
+    margin: auto;
+    width: 50%;
+    box-shadow: 8px 8px 10px #aaa;
+}
+
+
 
 /**
  * Set `margin-bottom` to maintain vertical rhythm
