--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -33,6 +33,16 @@ body {
     box-shadow: 8px 8px 10px #aaa;
 }
 
+// .gist {
+//    max-width:auto;
+//    overflow:auto;
+// }
+
+// .gist .blob-wrapper.data {
+//    max-height:100%;
+//    overflow:auto;
+// }
+
 
 
 /**
