--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -230,16 +230,71 @@ pre {
  * Table
  */
 
-table, th {
-    width: 100%;
-    table-layout: fixed;
-    margin: 24px;
-    text-align: center;
-    border-bottom: 1px solid #eee;
-    border-collapse: collapse;
-line-height: 25px;
-letter-spacing: 1px;
+// table, th {
+//     width: 100%;
+//     table-layout: fixed;
+//     margin: 24px;
+//     text-align: center;
+//     border-bottom: 1px solid #aaa;
+//     border-collapse: ;
+//     line-height: 25px;
+//     letter-spacing: 1px;
+// }
+
+
+
+
+table.one {                                 
+    margin-bottom: 3em;
+    border-collapse:collapse;   
+}  
+
+    
+td {                            /* removed the border from the table data rows  */
+    text-align: center;    
+    width: 10em;                   
+    padding: 1em;       
+}      
+
+    
+
+th {                              /* removed the border from the table heading row  */
+    text-align: center;                
+    padding: 1em;
+    background-color:#ccc;            /* added a red background color to the heading cells  */
+    color: #111;       
+}                 /* added a white font color to the heading text */
+
+    
+
+tr {   
+    height: 1em;    
 }
+    
+
+table tr:nth-child(even) {            /* added all even rows a #eee color  */
+    background-color: #eee;     
+}
+
+    
+
+table tr:nth-child(odd) {            /* added all odd rows a #fff color  */
+    background-color: #f8f8f8;  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /**
