--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -182,6 +182,7 @@ blockquote {
     margin-left: 30px;
     padding: 5px 15px;
     color: #888888;
+    // background-color: #eeeeef
 }
 
 
@@ -204,7 +205,8 @@ hr {
 pre,
 code {
     font-size: 15px;
-    border: 1px solid #f8f8f8;
+    // border: 1px solid #f8f8f8;
+    border: 1px solid #888888;
     border-radius: 3px;
     background-color: #eef;
     color: #111111;
