--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -303,8 +303,10 @@ table tr:nth-child(odd) {            /* added all odd rows a #fff color  */
  * Wrapper
  */
 .wrapper {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+    max-width: -webkit-calc(#{$content-width} + (#{$spacing-unit} * 2 ));
+    max-width:         calc(#{$content-width} + (#{$spacing-unit} * 2 ));
+    // max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+    // max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
     padding-right: $spacing-unit;
