--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -178,11 +178,9 @@ a:hover {
  * Blockquotes
  */
 blockquote {
-    border-left: 5px solid #eee;
-    margin-left: 30px;
-    padding: 5px 15px;
-    color: #888888;
-    // background-color: #eeeeef
+    border-left: 2px solid #dddddd;
+    padding: 0 15px;
+    color: #777777;
 }
 
 
@@ -190,11 +188,14 @@ blockquote {
  * Hr
  */
 hr {
-    border: none;
-    height: 1px;
-    margin: 40px auto;
-    background: #dcdcdc;
-    width: 100%;
+    height: 2px;
+    padding: 0;
+    margin: 16px 0;
+    background-color: #e7e7e7;
+    border: 0 none;
+    overflow: hidden;
+    box-sizing: content-box;
+    border-bottom: 1px solid #ddd;
 }
 
 
@@ -205,11 +206,11 @@ hr {
 pre,
 code {
     font-size: 15px;
-    // border: 1px solid #f8f8f8;
     border: 1px solid #888888;
     border-radius: 3px;
     background-color: #eef;
     color: #111111;
+    
 }
 
 code {
@@ -228,73 +229,40 @@ pre {
 }
 
 
-/**
- * Table
- */
-
-// table, th {
-//     width: 100%;
-//     table-layout: fixed;
-//     margin: 24px;
-//     text-align: center;
-//     border-bottom: 1px solid #aaa;
-//     border-collapse: ;
-//     line-height: 25px;
-//     letter-spacing: 1px;
-// }
-
-
-
-
-table.one {                                 
-    margin-bottom: 3em;
-    border-collapse:collapse;   
-}  
-
-    
-td {                            /* removed the border from the table data rows  */
-    text-align: center;    
-    width: 10em;                   
-    padding: 2px;   
-}      
-
-    
-
-th {                              /* removed the border from the table heading row  */
-    text-align: center;                
-    padding: 2px;
-    background-color:#EEEEEE;            
-    color: #111;       
-}                 
-
-    
-
-tr {   
-    height: 2px;    
+table {
+    padding: 0;
+    word-break: initial;
 }
-    
-
-table tr:nth-child(even) {            /* added all even rows a #eee color  */
-    background-color: #f8f8f8;     
+table tr {
+    border-top: 1px solid #cccccc;
+    background-color: white;
+    margin: 0;
+    padding: 0;
 }
-
-    
-
-table tr:nth-child(odd) {            /* added all odd rows a #fff color  */
-    background-color: #f8f8f8;  
+table tr:nth-child(2n) {
+    background-color: #f8f8f8;
 }
-
-
-
-
-
-
-
-
-
-
-
-
+table tr th {
+    font-weight: bold;
+    border: 1px solid #cccccc;
+    text-align: left;
+    margin: 0;
+    padding: 6px 13px;
+}
+table tr td {
+    border: 1px solid #cccccc;
+    text-align: left;
+    margin: 0;
+    padding: 6px 13px;
+}
+table tr th:first-child,
+table tr td:first-child {
+    margin-top: 0;
+}
+table tr th:last-child,
+table tr td:last-child {
+    margin-bottom: 0;
+}
 
 
 
