--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,5 +1,6 @@
 <footer class="site-footer">
 	<div class="wrapper">
+
         <!--<AFFICHAGE DES NEWS INDEX> -->
         {% for category in site.categories %}
         {% capture cat %}{{ category | first }}{% endcapture %}
@@ -22,6 +23,7 @@
     <div class="wrapper">
         <center>
             <p>
+                <a class="link" href="{{ site.baseurl }}/math/">Math & Physique</a> /
                 <a class="link" href="{{ site.baseurl }}/archive/">Archive</a> /
                 <a class="link" href="{{ site.baseurl }}/category/">Category</a> /
                 <a class="link" href="{{ site.baseurl }}/tags/">Tags</a> /
