--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,6 +31,7 @@ layout: default2
     <center>      
 		<p>
 			<a class="link" href="{{ "/" | relative_url }}">Home</a> /
+			<a class="link" href="{{ site.baseurl }}/math/">Math & Physique</a> /
 			<a class="link" href="{{ site.baseurl }}/archive/">Archive</a> /
 			<a class="link" href="{{ site.baseurl }}/category/">Category</a> / 
 			<a class="link" href="{{ site.baseurl }}/tags/">Tags</a> / 
