--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -87,7 +87,8 @@ figcaption {
  */
 ul, ol {
     margin-left: $spacing-unit;
-    color: #666;
+    // color: #666;
+    color: #000;
     letter-spacing: 1px;
 }
 
